[gd_scene load_steps=3 format=3 uid="uid://ddkyw7yf08s7b"]

[ext_resource type="Script" path="res://scripts/scenes/main.gd" id="1_wi2rb"]
[ext_resource type="PackedScene" uid="uid://caslk1qmsij8" path="res://scenes/first_level.tscn" id="2_ppk7r"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wi2rb")
level_scenes = Array[PackedScene]([ExtResource("2_ppk7r")])

[node name="MainMenuLayer" type="CanvasLayer" parent="."]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="MainMenuLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuLayer/CenterContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MainMenuLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="CreditsButton" type="Button" parent="MainMenuLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="MainMenuLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="PauseMenuLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuLayer/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuLayer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuLayer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenuLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ExitToMenuButton" type="Button" parent="PauseMenuLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to menu"

[node name="QuitButton" type="Button" parent="PauseMenuLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MainMenuLayer/CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenuLayer/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenuLayer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PauseMenuLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ExitToMenuButton" to="." method="_on_exit_to_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
